--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
         "vue-router": "^3.0.1"
     },
     "dependencies": {
+        "buefy": "^0.7.0",
+        "bulma": "^0.7.2",
+        "sass-loader": "7.1.0",
+        "vue-clickaway": "2.2.2",
+        "vue-lazyload": "1.2.6",
+        "vue-material": "1.0.0-beta-10.2",
+        "vue-template-compiler": "2.5.17",
         "vuex-router-sync": "^5.0.0"
     }
 }
