--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7",
         "linq": "^3.1.1",
+        "lodash": "^4.17.5",
         "node-sass": "^4.9.3",
+        "popper.js": "^1.12",
         "rxjs": "^6.3.3",
         "vform": "^1.0.0",
-        "vue-router": "^3.0.1"
+        "vue": "^2.5.7",
+        "vue-router": "^3.0.1",
+        "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
-        "buefy": "^0.7.0",
-        "bulma": "^0.7.2",
-        "sass-loader": "7.1.0",
+        "css-loader": "^2.1.0",
+        "sass-loader": "^7.1.0",
         "vue-clickaway": "2.2.2",
         "vue-lazyload": "1.2.6",
+        "vue-loader": "^13.3.0",
         "vue-material": "1.0.0-beta-10.2",
-        "vue-template-compiler": "2.5.17",
         "vuesax": "^3.7.1",
         "vuex-router-sync": "^5.0.0"
     }
