--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "laravel-mix": "^2.0",
         "linq": "^3.1.1",
         "lodash": "^4.17.5",
-        "node-sass": "^4.9.3",
+        "node-sass": "^4.11.0",
         "popper.js": "^1.12",
         "rxjs": "^6.3.3",
         "vform": "^1.0.0",
@@ -27,12 +27,15 @@
     },
     "dependencies": {
         "css-loader": "^2.1.0",
+        "js-cookie": "^2.2.0",
+        "moment": "^2.24.0",
         "sass-loader": "^7.1.0",
         "vue-clickaway": "2.2.2",
         "vue-lazyload": "1.2.6",
         "vue-loader": "^13.3.0",
         "vue-material": "1.0.0-beta-10.2",
         "vuesax": "^3.7.1",
+        "vuex": "^3.1.0",
         "vuex-router-sync": "^5.0.0"
     }
 }
